paragraph flex change

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
       <h1><b>Artist and Illustrator</b></h1>
 
       <h2><em>About Me</em></h2>
-
+<div class="container">
       <p class="aboutMe">
         Hi, I’m Caroline. Thanks for stopping by. I’m a 40 something,
         mixed-media artist, self taught, from Bonnie Scotland. I have a love for
@@ -40,7 +40,7 @@
         printmaking, jewellery design, to name but a few. I’d like to share some
         of my work with you, Enjoy!
       </p>
-
+</div>
       <p class="instagram">
         <a
           href="https://www.instagram.com/pics.bycaroline/?hl=en"
