--- a/Index.html
+++ b/Index.html
@@ -26,8 +26,7 @@
       <h2><em>About Me</em></h2>
 <div class="container">
       <p class="aboutMe">
-        Hi, I’m Caroline. Thanks for stopping by. I’m a 40 something,
-        mixed-media artist, self taught, from Bonnie Scotland. I have a love for
+        Hi, I’m Caroline. Thanks for stopping by. I’m a mixed-media artist, self taught, from Bonnie Scotland. I have a love for
         pencil, charcoal and watercolour art and enjoy a bit of a mash up of all
         these mediums. I also like to tinker with a little bit of tech to edit
         my work, particularly pro-create and photoshop. <br /><br />I have an
